fix menu gap

--- a/src/scss/partials/breakpoints/large/_large.scss
+++ b/src/scss/partials/breakpoints/large/_large.scss
@@ -241,14 +241,23 @@
 	      box-shadow: $default-box-shadow;
 	      list-style: none;
 	      width: 100%;
-	      // margin-top: 16px;
+	      margin-top: 16px;
 	      position: absolute;
 	      left: 0;
-	      top: 100%;
-	      display: none;
+	      top: 120%;
+	      // display: none;
 	      opacity: 0;
 	      z-index: 111;
 	      transition: 0.2s all;
+
+	      &::before {
+	      	content: '';
+	      	height: 16px;
+	      	width: 100%;
+	      	position: absolute;
+	      	top: -16px;
+	      	left: 0;
+	      }
 
 	      &-item {
 	        display: block;
@@ -264,9 +273,10 @@
 	      }
 	    }
 
-	    &:hover &-menu {
+	    &:hover .header-desktop__account-menu {
 	      display: block;
 	      opacity: 1;
+	      top: 100%;
 	    }
 
 	    &:hover &-profile {
@@ -343,6 +353,15 @@
 	    	visibility: hidden;
 	    	z-index: 11;
 	      transition: 0.2s all;
+
+	      &::before {
+	      	content: '';
+	      	width: 100%;
+	      	height: 30px;
+	      	position: absolute;
+	      	top: -10px;
+	      	left: 0;
+	      }
 
 	      &--single-column {
 	      	width: 200px;
