--- a/src/scss/partials/breakpoints/small/_small.scss
+++ b/src/scss/partials/breakpoints/small/_small.scss
@@ -7,42 +7,42 @@
 	  }
 	}
 
-	.special-slider {
+	// .special-slider {
 
-	  &__counter {
+	//   &__counter {
 
-	  	&-day {
-	  		&--value {
-		  		width: 40px;
-		  		height: 40px;
-	  			line-height: 46px;
-	  		}
-	  	}
+	//   	&-day {
+	//   		&--value {
+	// 	  		width: 40px;
+	// 	  		height: 40px;
+	//   			line-height: 46px;
+	//   		}
+	//   	}
 
-	  	&-hour {
-	  		&--value {
-		  		width: 40px;
-		  		height: 40px;
-	  			line-height: 46px;
-	  		}
-	  	}
+	//   	&-hour {
+	//   		&--value {
+	// 	  		width: 40px;
+	// 	  		height: 40px;
+	//   			line-height: 46px;
+	//   		}
+	//   	}
 
-	  	&-minute {
-	  		&--value {
-		  		width: 40px;
-		  		height: 40px;
-	  			line-height: 46px;
-	  		}
-	  	}
+	//   	&-minute {
+	//   		&--value {
+	// 	  		width: 40px;
+	// 	  		height: 40px;
+	//   			line-height: 46px;
+	//   		}
+	//   	}
 
-	  	&-second {
-	  		&--value {
-		  		width: 40px;
-		  		height: 40px;
-	  			line-height: 46px;
-		  	}
-	  	}
-	  }
-	}
+	//   	&-second {
+	//   		&--value {
+	// 	  		width: 40px;
+	// 	  		height: 40px;
+	//   			line-height: 46px;
+	// 	  	}
+	//   	}
+	//   }
+	// }
 }
 
